--- a/styles/cart.scss
+++ b/styles/cart.scss
@@ -5,16 +5,42 @@ $lavender: #d8a8d8;
 $blosson: #a878d8;
 $orchid: #9060a8;
 
+
+
+
+.carthead {
+  font-family: $montserrat;
+  font-size: 28px;
+  position: relative;
+  display: inline-block;
+  font-weight: 500;
+  margin: 20px 0px 0px 170px;
+  &::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -10px;
+    width: 50%;
+    height: 3px;
+    background: #a878d8;
+  }
+}
+
+
+
 .cartpagecontainer {
   width: 100%;
   display: flex;
   align-items: flex-start;
   justify-content: space-evenly;
-  padding: 100px 150px;
+  padding:25px 150px;
+  
   .productcontainer {
     width: 70%;
     min-width: 500px;
-    border: 0.5px solid rgba(0, 0, 0, 0.185);
+    // border: 0.5px solid rgba(0, 0, 0, 0.185);
+    box-shadow: 1px 2px 7px $taffy;
+
     border-radius: 5px;
     .product {
       width: 100%;
@@ -225,8 +251,11 @@ $orchid: #9060a8;
 // **************** media queries for tabs n ipads
 
 @media only screen and (max-width: 768px) {
+  .carthead{
+    margin: 20px 0 0 30px;
+  }
   .cartpagecontainer {
-    padding: 60px 10px;
+    padding: 30px 10px;
     .productcontainer {
       min-width: 500px;
       .product {
@@ -303,10 +332,15 @@ $orchid: #9060a8;
 // ************** media queries for mobile devices
 
 @media only screen and (max-width: 480px) {
+  .carthead{
+    margin:20px 0 15px 10px ;
+    font-size: 24px;
+  }
   .cartpagecontainer {
     overflow: hidden;
     flex-direction: column;
     padding: 10px 5px;
+   
     .productcontainer {
       min-width: 400px;
       width: 100%;
