redirect page updated

--- a/styles/redirect.css
+++ b/styles/redirect.css
@@ -33,10 +33,6 @@
 .card-front {
   height: 100%;
   width: 100%;
-  background-image: url("images/final logo trans.png");
-  background-position: 50% 50%;
-  background-size: 30%;
-  background-repeat: no-repeat;
   position: absolute;
   top: 0;
   left: 0;
@@ -58,6 +54,16 @@
           animation-timing-function: ease;
 }
 
+.card-front img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 30%;
+  height: 30%;
+}
+
 .card-back {
   height: 100%;
   width: 100%;
@@ -71,10 +77,6 @@
   -webkit-transition: 0.5s;
   transition: 0.5s;
   text-align: center;
-  background-image: url("images/qrcode.png");
-  background-repeat: no-repeat;
-  background-size: 20%;
-  background-position: 50% 50%;
   -webkit-animation-name: rotateback;
           animation-name: rotateback;
   -webkit-animation-duration: 1.5s;
@@ -85,6 +87,16 @@
           animation-iteration-count: infinite;
   -webkit-animation-timing-function: ease;
           animation-timing-function: ease;
+}
+
+.card-back img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 30%;
+  height: 30%;
 }
 
 @-webkit-keyframes rotatefront {
