--- a/styles/header.css
+++ b/styles/header.css
@@ -57,9 +57,6 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-box-orient: vertical;
@@ -67,7 +64,7 @@ nav {
       -ms-flex-direction: column;
           flex-direction: column;
   height: 100vh;
-  width: 30%;
+  width: 20%;
   list-style-type: none;
   position: absolute;
   left: 0;
@@ -82,9 +79,21 @@ nav {
   z-index: 9999;
 }
 
+.navlinks .menuheading {
+  font-family: "Montserrat", sans-serif;
+  color: white;
+  letter-spacing: 1.4px;
+  margin-left: 20px;
+}
+
 .nimishdisappear {
   display: block;
   overflow: hidden;
+}
+
+.navlink {
+  width: 100%;
+  padding: 0 0 0 20px;
 }
 
 .navlink a {
