--- a/styles/header.scss
+++ b/styles/header.scss
@@ -45,12 +45,12 @@ nav {
 .navlinks {
   // border-radius: 0 150px 0 0;
   display: flex;
-  align-items: center;
+  // align-items: center;
   justify-content: space-around;
   flex-direction: column;
   height: 100vh;
   // height: 100vh;
-  width: 30%;
+  width: 20%;
   list-style-type: none;
   position: absolute;
   left: 0;
@@ -61,12 +61,23 @@ nav {
   transition: transform 0.5s ease;
   z-index: 9999;
   // position: relative;
+  .menuheading{
+    font-family: $montserrat;
+    color: white;
+    letter-spacing: 1.4px;
+    margin-left: 20px;
+  }
 }
 .nimishdisappear {
   display: block;
   overflow: hidden;
 }
 
+.navlink{
+  width: 100%;
+  padding: 0 0 0 20px;
+
+}
 .navlink a {
   text-decoration: none;
   color: white;
