--- a/styles/shippingaddress.css
+++ b/styles/shippingaddress.css
@@ -1,4 +1,3 @@
-/* @import url("https://rsms.me/inter/inter.css"); */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap");
 :root {
   --color-gray: #737888;
@@ -7,7 +6,6 @@
 }
 
 html {
-  font-family: "Inter", sans-serif;
   font-size: 14px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -15,7 +13,7 @@ html {
 
 @supports (font-variation-settings: normal) {
   html {
-    font-family: "Inter var", sans-serif;
+    font-family: "Montserrat", sans-serif, "Inter var", sans-serif;
   }
 }
 
@@ -29,6 +27,7 @@ h1 {
 
 p {
   color: var(--color-gray);
+  margin-top: 5px;
 }
 
 hr {
@@ -39,12 +38,23 @@ hr {
   margin: 2rem 0;
 }
 
+.hr1 {
+  margin: 1rem 0;
+}
+
+h2 {
+  font-size: 18px;
+}
+
 .container {
   max-width: 40rem;
   padding: 10vw 2rem 0;
   margin: 0 auto;
-  height: 100vh;
-  min-height: 600px;
+}
+
+.container2 {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .form {
