--- a/styles/shippingaddress.scss
+++ b/styles/shippingaddress.scss
@@ -1,4 +1,3 @@
-/* @import url("https://rsms.me/inter/inter.css"); */
 
 :root {
   --color-gray: #737888;
@@ -14,14 +13,14 @@ $blosson: #a878d8;
 $orchid: #9060a8;
 
 html {
-  font-family: "Inter", sans-serif;
+  // font-family: $montserrat , sans-serif;
   font-size: 14px;
   box-sizing: border-box;
 }
 
 @supports (font-variation-settings: normal) {
   html {
-    font-family: "Inter var", sans-serif;
+    font-family: $montserrat,"Inter var", sans-serif;
   }
 }
 
@@ -35,6 +34,7 @@ h1 {
 
 p {
   color: var(--color-gray);
+  margin-top: 5px;
 }
 
 hr {
@@ -44,15 +44,25 @@ hr {
   border: 0;
   margin: 2rem 0;
 }
-
+.hr1{
+  margin: 1rem 0;
+}
+h2{
+  font-size: 18px;
+}
 .container {
   max-width: 40rem;
   padding: 10vw 2rem 0;
   margin: 0 auto;
-  height:100vh;
-  min-height: 600px;
+  // height:100vh;
+  // min-height: 600px;
 }
+.container2{
+  // padding: 100px 2rem 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
 
+}
 .form {
   display: grid;
   grid-gap: 1rem;
