--- a/styles/userprofile.css
+++ b/styles/userprofile.css
@@ -298,6 +298,17 @@
   margin: 20px 10px;
 }
 
+.userprofilecontainer .svgcontainer {
+  text-align: center;
+  padding: 40px;
+}
+
+.userprofilecontainer .svgcontainer img {
+  width: 200px;
+  -webkit-filter: drop-shadow(5px 7px 2px rgba(0, 0, 0, 0.253));
+          filter: drop-shadow(5px 7px 2px rgba(0, 0, 0, 0.253));
+}
+
 @media only screen and (max-width: 768px) {
   .userprofilecontainer {
     padding: 30px;
@@ -349,6 +360,9 @@
     width: 36%;
     padding: 6px;
     margin-top: 0;
+  }
+  .userprofilecontainer .svgcontainer img {
+    width: 170px;
   }
   .userprofilecontainer .activateproduct {
     margin-left: 10px;
