--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,114 +1,119 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap");
 $montserrat: "Montserrat", sans-serif;
-$taffy:#f0d8f0;
+$taffy: #f0d8f0;
 $lavender: #d8a8d8;
 $blosson: #a878d8;
 $orchid: #9060a8;
 
-
 footer {
-    width: 100%;
-    background-color: #a878d8;
-    padding: 50px 200px;
-    .footerhead {
-      // background: white;
-      .footerlogocontainer {
-        width: 200px;
-        img {
-          width: 100%;
-        }
-      }
-    }
-    .footerlinkscontainer {
-      width: 100%;
-      // background: red;
-      display: flex;
-      align-items: flex-start;
-      justify-content: space-between;
-    }
-    .footercoltitle {
-      font-size: 16px;
-      color: #f0d8f0;
-      font-family: $montserrat;
-      font-weight: 500;
-    }
-    .footercollinklist {
-      list-style-type: none;
-      li {
-        margin-top: 5px;
-        a {
-          font-size: 14px;
-          color: #f0d8f0;
-          text-decoration: none;
-          font-family: $montserrat;
-          font-weight: 300;
-        }
-      }
-    }
-    .footercol3 {
-      text-align: center;
-      .footersocialicons {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
+  width: 100%;
+  background-color: #a878d8;
+  padding: 50px 200px;
+  .footerhead {
+    // background: white;
+    .footerlogocontainer {
+      width: 200px;
+      img {
         width: 100%;
-        margin-top: 10px;
-        li a img {
-          width: 25px;
-          height: 25px;
-        }
       }
     }
   }
-
-
-
-  // **************** media queries for tabs n ipads
-
-
-  @media only screen and (max-width: 768px) {
-
-
-    footer {
-        padding: 20px 40px;
-        .footerhead .footerlogocontainer {
-          width: 150px;
-        }
-      }
+  .footerlinkscontainer {
+    width: 100%;
+    // background: red;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
   }
+  .footercoltitle {
+    font-size: 16px;
+    color: #f0d8f0;
+    font-family: $montserrat;
+    font-weight: 500;
+  }
+  .horizontal {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .footercollinklist {
+    list-style-type: none;
+    margin-top: 10px;
+    li {
+      margin-top: 7px;
+      a {
+        font-size: 14px;
+        color: #f0d8f0;
+        text-decoration: none;
+        font-family: $montserrat;
+        font-weight: 500;
+      }
+    }
+  }
+  .footercol3 {
+    text-align: center;
+    .footersocialicons {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      width: 100%;
+      margin-top: 10px;
+      li a img {
+        width: 25px;
+        height: 25px;
+      }
+    }
+  }
+}
 
+// **************** media queries for tabs n ipads
 
+@media only screen and (max-width: 768px) {
+  footer {
+    padding: 20px 40px;
+    .footerhead .footerlogocontainer {
+      width: 150px;
+    }
+  }
+}
 
-
-  // ************** media queries for mobile devices
+// ************** media queries for mobile devices
 
 @media only screen and (max-width: 480px) {
+  footer {
+    padding: 10px 20px;
+    .footerhead .footerlogocontainer {
+      width: 150px;
+    }
+    .footerlinkscontainer {
+      flex-direction: column;
 
-
-    footer {
-        padding: 10px 20px;
-        .footerhead .footerlogocontainer {
-          width: 150px;
-        }
-        .footerlinkscontainer {
-          flex-direction: column;
-          div {
-            margin-bottom: 20px;
-          }
-        }
-        .footercoltitle {
-          font-size: 13px;
-        }
-        .footercollinklist li {
-          margin-top: 1px;
-          a {
-            font-size: 11px;
-          }
-        }
-    
-        .footercol3 .footersocialicons li a img {
-          width: 20px;
-          height: 20px;
-        }
+      div {
+        margin-bottom: 20px;
       }
+    }
+    .footercoltitle {
+      font-size: 13px;
+    }
+    .horizontal{
+      flex-direction: row;
+      margin-top: 5px;
+      :not(:first-child){
+        margin-left: 10px ;
+      }
+    }
+    .footercollinklist li {
+      margin-top: 1px;
+      a {
+        font-size: 11px;
+        font-weight: 500;
+      }
+    }
+
+    .footercol3 .footersocialicons li a img {
+      width: 20px;
+      height: 20px;
+    }
+  }
 }
