--- a/styles/userprofile.scss
+++ b/styles/userprofile.scss
@@ -280,6 +280,14 @@ $orchid: #9060a8;
       margin: 20px 10px;
     }
   }
+  .svgcontainer{
+    text-align: center;
+    padding:40px;
+    img{
+      width: 200px;
+      filter: drop-shadow(5px 7px 2px rgba(0, 0, 0, 0.253));
+    }
+  }
 }
 
 //**************** media queries for tabs n ipads
@@ -342,6 +350,11 @@ $orchid: #9060a8;
             }
           }
         }
+      }
+    }
+    .svgcontainer{
+      img{
+        width: 170px;
       }
     }
     .activateproduct {
