--- a/styles/orderdetail.css
+++ b/styles/orderdetail.css
@@ -113,17 +113,26 @@
   color: #a878d8;
 }
 
-.orderdetailcontainer .orderdetail span .cancel {
+.orderdetailcontainer .orderdetail span .cancel, .orderdetailcontainer .orderdetail span .print-reciept {
   padding: 8px 15px;
   cursor: pointer;
   border-radius: 5px;
-  background-color: #f45951;
   border: none;
   outline: none;
   margin: 10px;
-  color: #f6f5f4;
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
+}
+
+.orderdetailcontainer .orderdetail span .cancel {
+  background-color: #f45951;
+  color: #f6f5f4;
+}
+
+.orderdetailcontainer .orderdetail span .print-reciept {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
 }
 
 .orderdetailcontainer .orderdetail .billingdetailcontainer {
@@ -167,6 +176,7 @@
 }
 
 .orderdetailcontainer .productcontainer .product {
+  padding: 10px 0;
   width: 100%;
   height: 250px;
   display: -webkit-box;
@@ -330,7 +340,7 @@
     font-size: 12px;
     margin: 10px;
   }
-  .orderdetailcontainer .orderdetail span .cancel {
+  .orderdetailcontainer .orderdetail span .cancel, .orderdetailcontainer .orderdetail span .print-reciept {
     font-size: 12px;
     padding: 5px 12px;
   }
@@ -416,7 +426,7 @@
   .orderdetailcontainer .orderdetail span .paymenttype span {
     display: inline-block;
   }
-  .orderdetailcontainer .orderdetail span .cancel {
+  .orderdetailcontainer .orderdetail span .cancel, .orderdetailcontainer .orderdetail span .print-reciept {
     margin: 7px;
   }
   .orderdetailcontainer .orderdetail .billingdetailcontainer {
