--- a/styles/orderdetail.scss
+++ b/styles/orderdetail.scss
@@ -107,17 +107,25 @@ $orchid: #9060a8;
           color: $blosson;
         }
       }
-      .cancel {
+      .cancel,.print-reciept {
         padding: 8px 15px;
         cursor: pointer;
         border-radius: 5px;
-        background-color: #f45951;
         border: none;
         outline: none;
         margin: 10px;
-        color: #f6f5f4;
         font-family: $montserrat;
         font-size: 16px;
+      }
+      .cancel{
+        background-color: #f45951;
+        color: #f6f5f4;
+
+      }
+      .print-reciept{
+        background-color: white;
+        color: black;
+        border: 1px solid black;
       }
     }
     .billingdetailcontainer {
@@ -159,6 +167,7 @@ $orchid: #9060a8;
     box-shadow: 1px 2px 7px $taffy;
     border-radius: 5px;
     .product {
+      padding: 10px 0;
       width: 100%;
       height: 250px;
       display: flex;
@@ -294,7 +303,7 @@ $orchid: #9060a8;
           font-size: 12px;
           margin: 10px;
         }
-        .cancel {
+        .cancel,.print-reciept{
           font-size: 12px;
           padding: 5px 12px;
         }
@@ -391,7 +400,7 @@ $orchid: #9060a8;
             display: inline-block;
           }
         }
-        .cancel {
+        .cancel,.print-reciept{
           margin: 7px;
         }
       }
