--- a/styles/productdetail.css
+++ b/styles/productdetail.css
@@ -10,7 +10,7 @@
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  height: 80vh;
+  height: 83vh;
 }
 
 .productdetailcontainer .productcarousel {
@@ -174,12 +174,41 @@
   color: #f0d8f0;
 }
 
-.productdetailcontainer .productinfo .detailqrbox {
+.productdetailcontainer .productinfo .detailqrboxcontainer {
+  text-align: center;
+  width: 150px;
+  height: 150px;
+  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.productdetailcontainer .productinfo .detailqrboxcontainer .detailqrboxheading {
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  color: black;
+  font-weight: 400;
+}
+
+.productdetailcontainer .productinfo .detailqrboxcontainer .detailqrbox {
   width: 100px;
   height: 100px;
   border: 1px solid black;
-  margin-top: 10px;
   border-radius: 5px;
+  margin: 5 auto;
 }
 
 .modalcontainer {
@@ -202,7 +231,7 @@
 }
 
 .modalcontainer ::-webkit-scrollbar {
-  width: 5px;
+  width: 7px;
 }
 
 .modalcontainer ::-webkit-scrollbar-track {
@@ -221,6 +250,13 @@
   width: 90%;
   max-width: 600px;
   margin: 15px auto 5px auto;
+  text-align: center;
+}
+
+.modalcontainer .qrboxcontainer .qrtitle {
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  margin-bottom: 10px;
 }
 
 .modalcontainer .qrboxcontainer div {
@@ -293,9 +329,9 @@
 }
 
 .modalcontainer .collapsiblecontainer details div {
-  border-left: 2px solid #000;
-  border-right: 2px solid #000;
-  border-bottom: 2px solid #000;
+  border-left: 1px solid #000;
+  border-right: 1px solid #000;
+  border-bottom: 1px solid #000;
   padding: 1.5em;
   font-family: "Montserrat", sans-serif;
 }
@@ -317,7 +353,7 @@
 }
 
 .modalcontainer .collapsiblecontainer summary {
-  border: 2px solid #000;
+  border: 1px solid #000;
   padding: 0.75em 1em;
   font-family: "Montserrat", sans-serif;
   cursor: pointer;
@@ -334,7 +370,7 @@
   content: "↓";
   width: 1.75rem;
   height: 1.75rem;
-  background-color: #000;
+  background-color: #a878d8;
   color: #fff;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -423,13 +459,13 @@
 
 .modalcontainer .collapsiblecontainer .selectstyle .select select:focus {
   outline: none;
-  border-color: #07f;
+  border-color: #d8a8d8;
   -webkit-box-shadow: 0 0 0 2px rgba(0, 119, 255, 0.2);
           box-shadow: 0 0 0 2px rgba(0, 119, 255, 0.2);
 }
 
 .modalcontainer .collapsiblecontainer .selectstyle .select select:hover + svg {
-  stroke: #07f;
+  stroke: #d8a8d8;
 }
 
 .modalcontainer .collapsiblecontainer .selectstyle .sprites {
