Terms n settings addded

--- a/styles/productdetail.css
+++ b/styles/productdetail.css
@@ -479,6 +479,10 @@
           user-select: none;
 }
 
+.modalcontainer .collapsiblecontainer .colorlabel {
+  font-family: "Montserrat", sans-serif;
+}
+
 @media only screen and (max-width: 768px) {
   .productdetailcontainer .productcarousel {
     height: 80%;
