--- a/styles/shippingaddress.scss
+++ b/styles/shippingaddress.scss
@@ -24,15 +24,13 @@ html {
   }
 }
 
-body {
-  margin: 0;
-}
 
-h1 {
+
+.shipping-h1 {
   margin-bottom: 1rem;
 }
 
-p {
+.shipping-p {
   color: var(--color-gray);
   margin-top: 5px;
 }
@@ -47,7 +45,7 @@ hr {
 .hr1{
   margin: 1rem 0;
 }
-h2{
+.shipping-h2{
   font-size: 18px;
   font-weight: 500;
 }
