--- a/styles/productdetail.css
+++ b/styles/productdetail.css
@@ -583,4 +583,34 @@
     padding: 8px 35px;
   }
 }
+
+@media only screen and (max-width: 320px) {
+  .productdetailcontainer .productinfo .buycart .addtocart {
+    padding: 8px;
+  }
+  .productdetailcontainer .productinfo .buycart .buy {
+    padding: 8px 15px;
+    border: 2px solid #a878d8;
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  .productdetailcontainer .productinfo .buycart .addtocart {
+    padding: 7px 20px;
+  }
+  .productdetailcontainer .productinfo .buycart .buy {
+    padding: 7px 20px;
+    border: 2px solid #a878d8;
+  }
+}
+
+@media only screen and (max-width: 312px) {
+  .productdetailcontainer .productinfo .buycart .addtocart {
+    padding: 8px;
+  }
+  .productdetailcontainer .productinfo .buycart .buy {
+    padding: 8px;
+    border: 2px solid #a878d8;
+  }
+}
 /*# sourceMappingURL=productdetail.css.map */
