--- a/styles/userprofile.css
+++ b/styles/userprofile.css
@@ -1,10 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap");
 .userprofilecontainer {
+  position: relative;
   width: 100%;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   padding: 50px 100px;
+}
+
+.userprofilecontainer #homelink {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  display: block;
+}
+
+.userprofilecontainer #homelink a {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  color: #a878d8;
 }
 
 .userprofilecontainer .userprofilehead {
@@ -313,6 +327,13 @@
   .userprofilecontainer {
     padding: 30px;
   }
+  .userprofilecontainer #homelink {
+    top: 5px;
+    left: 5px;
+  }
+  .userprofilecontainer #homelink a {
+    font-size: 14px;
+  }
   .userprofilecontainer .userprofilehead {
     margin-bottom: 30px;
   }
@@ -372,6 +393,13 @@
 @media only screen and (max-width: 480px) {
   .userprofilecontainer {
     padding: 20px 10px;
+  }
+  .userprofilecontainer #homelink {
+    top: 7px;
+  }
+  .userprofilecontainer #homelink a {
+    font-size: 12px;
+    font-weight: 500;
   }
   .userprofilecontainer .userprofilehead {
     margin: 20px 7px;
